Bug 1513401 - Increase contrast of unsaturated selection colors in nsLookAndFeel.mm. r=mstange, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D14566

--HG--
extra : source : 2c2d55d510a7d88ef743950afe416eebba518b56